# lark-brief

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  main.py  pyproject.toml
config/: settings.yaml  sources.yaml
frontend/: Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/api/[...path]/: route.ts
frontend/app/brief/[date]/: page.tsx
frontend/app/search/: page.tsx
frontend/app/stats/: page.tsx
frontend/components/: navbar.tsx
frontend/lib/: api.ts  i18n.tsx
src/: composer.py  crawler.py  feed.py  main.py  pipeline.py  pusher.py  store.py  summarizer.py
src/web/: __init__.py  deps.py  i18n.py  routes.py
src/web/locales/: en.json  zh.json
src/web/static/: style.css
src/web/templates/: 404.html  500.html  base.html  brief.html  index.html  search.html  stats.html
tests/: test_category_weighting.py  test_schedule_split.py
